<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SocialTiles</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="char_count_string">0/144</string>
    <string name="send_string">Send</string>
    <string name="title_activity_group_main">GroupMainActivity</string>
    <string name="todo_string">TODO</string>
    <string name="add_new_goal">Add new goal</string>
    <string name="title_activity_events_main">EventsMainActivity</string>
    <string name="title_activity_events_create_main">EventsCreateMainActivity</string>
    <string name="selectStartDate_btn">Select start date</string>
    <string name="selectStartDate_text"> No date Selected</string>
    <string name="selectEndDate_btn">Select end date</string>
    <string name="selectEndDate_text"> No date Selected</string>
    <string name="rewardText_text">Write some text to congradualate</string>
    <string name="submitCreateEvent_text">Create Event</string>
    <string name="groups">Groups</string>
    <string name="friends">Friends</string>
    <string name="competition">Competition</string>
    <string name="training_session">Training Session</string>
    <string name="enter_event_name">Enter Event name</string>
    <string name="congradulations">Congratulations</string>
    <string name="choose_event_type">Choose event type</string>
    <string name="choose_participants_type">Choose participants type</string>
    <string name="confirm"> Confirm </string>
    <string name="title_activity_group_create_main">GroupCreateMainActivity</string>
    <string name="group_name_">Group Name:</string>
    <string name="group_description">Group Description</string>
    <string name="title_activity_add_new_friend_main">AddNewFriendMainActivity</string>
    <string name="search">Search</string>
    <string name="game_name">Game name</string>
    <string name="score">Score</string>
    <string name="date">Date</string>
    <string name="winner">Winner</string>
    <string name="number_of_tiles">Number of tiles</string>
    <string name="misses">Misses</string>
    <string name="points">Points</string>
    <string name="duration">Duration</string>
    <string name="level">Level</string>
    <string name="app_id">151014698431981</string>
    <string name="title_activity_friend_main_page">FriendMainPage</string>
    <string name="you_are_connected">You are connected</string>

</resources>
