<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/enter_event_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:inputType="text"
        android:text="@string/enter_event_name" >
    </EditText>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/setStartDate_button_id"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:text="@string/selectStartDate_btn"
            android:textSize="12sp" />

        <Button
            android:id="@+id/setEndDate_button_id"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:text="@string/selectEndDate_btn"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/rewardText_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/rewardTex_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text|textImeMultiLine"
                android:maxLength="144"
                android:text="@string/congradulations" />

            <TextView
                android:id="@+id/charCounts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:text="0/144" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/choose_participants_type" />

        <RadioGroup
            android:id="@+id/membertype"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radio_groups"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/groups"
                android:textSize="12sp" />

            <RadioButton
                android:id="@+id/radio_friends"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/friends"
                android:textSize="12sp" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Reward points: "
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/reward_points_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number" >

            <requestFocus />
        </EditText>

    </LinearLayout>

</LinearLayout>